# hash

./: .gitignore  CLAUDE.md  LICENSE  Makefile.in  README.md  configure.ac  configure.in  meson.build  meson.options
.github/workflows/: makefile.yml
bench/: areion.bench  comparison.bench  hash.bench  sha2.bench  tcllib_sha256-1.0.3.tm
doc/: hash.md.in  meson.build
generic/: areion.c  areion.h  areion_neon.h  areion_software.h  areion_x86.h  hashInt.h  main.c  md5.c  md5.h  sha2.c  tclstuff.h
tests/: areion.test  common.tcl  md5.test  sha2.test  sha256.test  sha384.test  sha512.test
